// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table[Base] should render correctly  1`] = `
<div>
  <div
    class="soui-table soui-table-wrapper soui-table-vertical-align-top soui-table-default"
    dir="ltr"
  >
    <div
      class="soui-table-body-wrapper"
    >
      <table>
        <colgroup>
          <col />
          <col />
          <col />
          <col />
        </colgroup>
        <thead>
          <tr>
            <th
              class="soui-table-cell-align-left"
              dir="ltr"
              rowspan="1"
              style="top: 0px; position: sticky;"
            >
              <div
                class=""
              >
                <span>
                  Name
                </span>
              </div>
            </th>
            <th
              class="soui-table-cell-align-left"
              dir="ltr"
              rowspan="1"
              style="top: 0px; position: sticky;"
            >
              <div
                class=""
              >
                <span>
                  Country
                </span>
              </div>
            </th>
            <th
              class="soui-table-cell-align-left"
              dir="ltr"
              rowspan="1"
              style="top: 0px; position: sticky;"
            >
              <div
                class=""
              >
                <span>
                  Position
                </span>
              </div>
            </th>
            <th
              class="soui-table-cell-align-left soui-table-cell-ignore-border"
              dir="ltr"
              rowspan="1"
              style="top: 0px; position: sticky;"
            >
              <div
                class=""
              >
                <span>
                  Office
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="soui-table-row-hover"
          >
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Ephraim Wisozk
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Reunion
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Marketing Designer
            </td>
            <td
              class="soui-table-cell-ignore-border"
              colspan="1"
              dir="ltr"
            >
              Miami
            </td>
          </tr>
          <tr
            class="soui-table-row-hover"
          >
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Osvaldo Beer
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Syrian Arab Republic
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Financial Controller
            </td>
            <td
              class="soui-table-cell-ignore-border"
              colspan="1"
              dir="ltr"
            >
              San Paulo
            </td>
          </tr>
          <tr
            class="soui-table-row-hover"
          >
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Dylan Ratke
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Peru
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Development Lead
            </td>
            <td
              class="soui-table-cell-ignore-border"
              colspan="1"
              dir="ltr"
            >
              Boston
            </td>
          </tr>
          <tr
            class="soui-table-row-hover"
          >
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Shaniya Jacobs
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Peru
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Developer
            </td>
            <td
              class="soui-table-cell-ignore-border"
              colspan="1"
              dir="ltr"
            >
              Chengdu
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table[Base] should render correctly about border 1`] = `
<div>
  <div
    class="soui-table soui-table-wrapper soui-table-bordered soui-table-vertical-align-top soui-table-default"
    dir="ltr"
  >
    <div
      class="soui-table-body-wrapper"
    >
      <table>
        <colgroup>
          <col />
          <col />
          <col />
          <col />
        </colgroup>
        <thead>
          <tr>
            <th
              class="soui-table-cell-align-left"
              dir="ltr"
              rowspan="1"
              style="top: 0px; position: sticky;"
            >
              <div
                class=""
              >
                <span>
                  Name
                </span>
              </div>
            </th>
            <th
              class="soui-table-cell-align-left"
              dir="ltr"
              rowspan="1"
              style="top: 0px; position: sticky;"
            >
              <div
                class=""
              >
                <span>
                  Country
                </span>
              </div>
            </th>
            <th
              class="soui-table-cell-align-left"
              dir="ltr"
              rowspan="1"
              style="top: 0px; position: sticky;"
            >
              <div
                class=""
              >
                <span>
                  Position
                </span>
              </div>
            </th>
            <th
              class="soui-table-cell-align-left soui-table-cell-ignore-border"
              dir="ltr"
              rowspan="1"
              style="top: 0px; position: sticky;"
            >
              <div
                class=""
              >
                <span>
                  Office
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="soui-table-row-hover"
          >
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Ephraim Wisozk
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Reunion
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Marketing Designer
            </td>
            <td
              class="soui-table-cell-ignore-border"
              colspan="1"
              dir="ltr"
            >
              Miami
            </td>
          </tr>
          <tr
            class="soui-table-row-striped soui-table-row-hover"
          >
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Osvaldo Beer
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Syrian Arab Republic
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Financial Controller
            </td>
            <td
              class="soui-table-cell-ignore-border"
              colspan="1"
              dir="ltr"
            >
              San Paulo
            </td>
          </tr>
          <tr
            class="soui-table-row-hover"
          >
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Dylan Ratke
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Peru
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Development Lead
            </td>
            <td
              class="soui-table-cell-ignore-border"
              colspan="1"
              dir="ltr"
            >
              Boston
            </td>
          </tr>
          <tr
            class="soui-table-row-striped soui-table-row-hover"
          >
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Shaniya Jacobs
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Peru
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Developer
            </td>
            <td
              class="soui-table-cell-ignore-border"
              colspan="1"
              dir="ltr"
            >
              Chengdu
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table[Base] should render correctly about group 1`] = `
<div
  class="soui-table soui-table-wrapper soui-table-bordered soui-table-vertical-align-top soui-table-default"
  dir="ltr"
>
  <div
    class="soui-table-body-wrapper"
  >
    <table>
      <colgroup>
        <col />
        <col />
        <col />
        <col />
        <col />
        <col />
      </colgroup>
      <thead>
        <tr>
          <th
            class="soui-table-cell-align-left soui-table-cell-group"
            colspan="3"
            dir="ltr"
            style="padding: 0px; top: 0px; position: sticky;"
          >
            <div>
              <span
                style="background: rgb(232, 235, 240); display: block; line-height: 40px; color: rgb(20, 23, 55);"
              >
                Name
              </span>
            </div>
          </th>
          <th
            class="soui-table-cell-align-left"
            dir="ltr"
            rowspan="3"
            style="top: 0px; position: sticky;"
          >
            <div
              class=""
            >
              <span>
                Country
              </span>
            </div>
          </th>
          <th
            class="soui-table-cell-align-left soui-table-cell-ignore-border soui-table-cell-group my-custom-header"
            colspan="2"
            dir="ltr"
            style="padding: 0px; top: 0px; position: sticky; background: rgb(238, 242, 254);"
          >
            <div>
              <span>
                Other
              </span>
            </div>
          </th>
        </tr>
        <tr>
          <th
            class="soui-table-cell-align-left soui-table-cell-group"
            colspan="2"
            dir="ltr"
            style="top: 0px; position: sticky;"
          >
            <div>
              True Name
            </div>
          </th>
          <th
            class="soui-table-cell-align-left"
            dir="ltr"
            rowspan="2"
            style="top: 0px; position: sticky;"
          >
            <div
              class=""
            >
              <span>
                Nick Name
              </span>
            </div>
          </th>
          <th
            class="soui-table-cell-align-left"
            dir="ltr"
            rowspan="2"
            style="top: 0px; position: sticky;"
          >
            <div
              class=""
            >
              <span>
                Office
              </span>
            </div>
          </th>
          <th
            class="soui-table-cell-align-left soui-table-cell-ignore-border"
            dir="ltr"
            rowspan="2"
            style="top: 0px; position: sticky;"
          >
            <div
              class=""
            >
              <span>
                Position
              </span>
            </div>
          </th>
        </tr>
        <tr>
          <th
            class="soui-table-cell-align-left"
            dir="ltr"
            rowspan="1"
            style="top: 0px; position: sticky;"
          >
            <div
              class=""
            >
              <span>
                First Name
              </span>
            </div>
          </th>
          <th
            class="soui-table-cell-align-left"
            dir="ltr"
            rowspan="1"
            style="top: 0px; position: sticky;"
          >
            <div
              class=""
            >
              <span>
                Last Name
              </span>
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="soui-table-row-hover"
        >
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            Ephraim
          </td>
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            Wisozk
          </td>
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            nickname
          </td>
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            Reunion
          </td>
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            Miami
          </td>
          <td
            class="soui-table-cell-ignore-border"
            colspan="1"
            dir="ltr"
          >
            Marketing Designer
          </td>
        </tr>
        <tr
          class="soui-table-row-hover"
        >
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            Osvaldo
          </td>
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            Beer
          </td>
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            nickname
          </td>
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            Syrian Arab Republic
          </td>
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            San Paulo
          </td>
          <td
            class="soui-table-cell-ignore-border"
            colspan="1"
            dir="ltr"
          >
            Financial Controller
          </td>
        </tr>
        <tr
          class="soui-table-row-hover"
        >
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            Dylan
          </td>
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            Ratke
          </td>
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            nickname
          </td>
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            Peru
          </td>
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            Boston
          </td>
          <td
            class="soui-table-cell-ignore-border"
            colspan="1"
            dir="ltr"
          >
            Development Lead
          </td>
        </tr>
        <tr
          class="soui-table-row-hover"
        >
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            Shaniya
          </td>
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            Jacobs
          </td>
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            nickname
          </td>
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            Peru
          </td>
          <td
            class=""
            colspan="1"
            dir="ltr"
          >
            Chengdu
          </td>
          <td
            class="soui-table-cell-ignore-border"
            colspan="1"
            dir="ltr"
          >
            Developer
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table[Base] should render correctly about size 1`] = `
<div>
  <div
    class="soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="soui-radio soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        small
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper soui-radio-wrapper-checked"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        default
      </span>
    </div>
    <div
      class="soui-radio soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="soui-radio-indicator-wrapper"
      >
        <span
          class="soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="soui-radio-desc"
      >
        large
      </span>
    </div>
  </div>
  <div
    class="soui-table soui-table-wrapper soui-table-vertical-align-top soui-table-default"
    dir="ltr"
  >
    <div
      class="soui-table-body-wrapper"
    >
      <table>
        <colgroup>
          <col />
          <col />
          <col />
          <col />
        </colgroup>
        <thead>
          <tr>
            <th
              class="soui-table-cell-align-left"
              dir="ltr"
              rowspan="1"
              style="top: 0px; position: sticky;"
            >
              <div
                class=""
              >
                <span>
                  Name
                </span>
              </div>
            </th>
            <th
              class="soui-table-cell-align-left"
              dir="ltr"
              rowspan="1"
              style="top: 0px; position: sticky;"
            >
              <div
                class=""
              >
                <span>
                  Country
                </span>
              </div>
            </th>
            <th
              class="soui-table-cell-align-left"
              dir="ltr"
              rowspan="1"
              style="top: 0px; position: sticky;"
            >
              <div
                class=""
              >
                <span>
                  Position
                </span>
              </div>
            </th>
            <th
              class="soui-table-cell-align-left soui-table-cell-ignore-border"
              dir="ltr"
              rowspan="1"
              style="top: 0px; position: sticky;"
            >
              <div
                class=""
              >
                <span>
                  Office
                </span>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="soui-table-row-hover"
          >
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Ephraim Wisozk
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Reunion
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Marketing Designer
            </td>
            <td
              class="soui-table-cell-ignore-border"
              colspan="1"
              dir="ltr"
            >
              Miami
            </td>
          </tr>
          <tr
            class="soui-table-row-hover"
          >
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Osvaldo Beer
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Syrian Arab Republic
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Financial Controller
            </td>
            <td
              class="soui-table-cell-ignore-border"
              colspan="1"
              dir="ltr"
            >
              San Paulo
            </td>
          </tr>
          <tr
            class="soui-table-row-hover"
          >
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Dylan Ratke
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Peru
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Development Lead
            </td>
            <td
              class="soui-table-cell-ignore-border"
              colspan="1"
              dir="ltr"
            >
              Boston
            </td>
          </tr>
          <tr
            class="soui-table-row-hover"
          >
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Shaniya Jacobs
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Peru
            </td>
            <td
              class=""
              colspan="1"
              dir="ltr"
            >
              Developer
            </td>
            <td
              class="soui-table-cell-ignore-border"
              colspan="1"
              dir="ltr"
            >
              Chengdu
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
